--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,7 +65,7 @@ body {
 
 .nav-item a {
   text-decoration: none;
-  color: #fff;
+  color: #161616;
   font-weight: bold;
   padding: 10px 15px;
   transition: color 0.3s ease;
@@ -91,7 +91,7 @@ body {
     right: 0;
     height: 100%;
     width: 255px;
-    background-color: #1e3c72;
+    background-color: #f2f3f5;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
@@ -189,8 +189,8 @@ body {
     top: 0;
     right: 0;
     height: 100%;
-    width: 220px;
-    background-color: #1e3c72;
+    width: 257px;
+    background-color: #e2e3e6;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
