--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -65,7 +65,7 @@ body {
 
 .nav-item a {
   text-decoration: none;
-  color: #161616;
+  color: #eb7373; /*navbar anchor color*/
   font-weight: bold;
   padding: 10px 15px;
   transition: color 0.3s ease;
