--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -18,8 +18,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 5%;
-  background: rgb(28, 27, 35);
+  padding: 27px 5%;
+  background: rgb(239, 239, 245);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
@@ -32,13 +32,11 @@ body {
   align-items: center;
 }
 
-.logo {
-  height: 50px;
-  transition: transform 0.3s ease;
-}
-
-.logo:hover {
-  transform: scale(1.1);
+.logo-text {
+  font-size: 20px;
+  font-weight: bold;
+  color: #eb4707; /* Change to desired color */
+  font-family: "YourPreferredFont", sans-serif;
 }
 
 /* Toggle button for mobile */
@@ -47,7 +45,7 @@ body {
   background-color: transparent;
   border: none;
   font-size: 24px;
-  color: white;
+  color: rgb(26, 25, 25);
   cursor: pointer;
   z-index: 1100; /* Ensure it's above other elements */
   position: relative; /* Position relative to handle z-index */
@@ -65,7 +63,7 @@ body {
 
 .nav-item a {
   text-decoration: none;
-  color: #eb7373; /*navbar anchor color*/
+  color: #1a1919; /*navbar anchor color*/
   font-weight: bold;
   padding: 10px 15px;
   transition: color 0.3s ease;
@@ -74,8 +72,7 @@ body {
 }
 
 .nav-item a:hover {
-  color: #ffcc00;
-  background-color: rgba(255, 255, 255, 0.1);
+  color: #ffa600;
 }
 
 /* Mobile styles */
@@ -186,7 +183,7 @@ body {
 
   .nav {
     position: fixed;
-    top: 0;
+    top: 30px;
     right: 0;
     height: 100%;
     width: 257px;
@@ -307,11 +304,15 @@ body {
 .links-section ul li a {
   color: #fff;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .links-section ul li a:hover {
-  text-decoration: underline;
+  text-decoration: none;
+  transition: 0.5s;
+  color: #eeb10b;
+  font-size: 17px;
+  background-color: transparent;
 }
 
 .newsletter-section p {
@@ -489,14 +490,17 @@ body {
 }
 
 .Legal-Area {
-  padding-top: 10px;
-  font-size: 20px;
-  font-weight: inherit;
-  color: red;
+  font-size: 1.6em;
+  margin-top: 0;
+  font-weight: 600;
+  color: #333;
+  font-family: "Baskervville", serif;
+  margin-top: 29px;
+  margin-bottom: 29px;
 }
 
 .Legal-Area:hover {
-  color: #333;
+  color: red;
 }
 
 /* Responsive Styles */
@@ -722,10 +726,10 @@ body {
 }
 
 p {
-  font-size: 16px;
+  font-size: 1em;
+  color: #555;
   line-height: 1.6;
-  color: #34495e;
-  margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
   text-align: start;
 }
 
@@ -1005,8 +1009,9 @@ textarea {
 .case-study-title {
   font-size: 22px;
   font-weight: bold;
-  margin: 20px 0 10px;
+  margin: 27px 5px 36px;
   color: #2c3e50;
+  font-family: "Baskervville", serif;
 }
 
 .case-study-description {
