--- a/frontend/src/components/AboutUs/AboutUs.css
+++ b/frontend/src/components/AboutUs/AboutUs.css
@@ -76,7 +76,7 @@ img {
   letter-spacing: 2px;
   overflow: hidden;
   white-space: nowrap;
-  border-right: 2px solid hsl(0, 0%, 80%);
+  /* border-right: 2px solid hsl(0, 0%, 80%); */
   animation: typewriter 4s steps(44) 1s 1 normal both,
     blinkTextCursor 500ms infinite;
 }
